    - #103 Build of fastsum fails because fftw_libs are not found.
    - #109 Update m4 files for 3.5.2 release.
    - Removed superfluous calls to autoreconf in bootstrap.

    Enhancements
    - #98  Add Julia Interface fastsum.
    - #105 Even bandwith in NFCT and NFST.
    - #108 Compute NFFT_EPSILON at runtime.
    - #110 In-place fftw for dimension >1 (reduce memory consumption).
    - TravisCI tests on OSX

Changes in version 3.5.1:

    Bugfixes
    - #90 Improve check if tests are executed in Matlab or Octave.
    - #92 Build with Octave 5.1.0 fails in Windows.
    - #95 FFTW3 Linking problem while building.
    - #96 Remove unnecessary dependence on ncurses library.

    Enhancements
    - #86 Add Julia Interface for NFCT, NFST.
    - #87 FSFT: Spherical Fourier transform with equidistant nodes.
    - #88 Inverse NFFT via frame approach.

Changes in version 3.5.0:

    Bugfixes
    - #83 _Complex is not supported by some compilers. 

    Enhancements
    - #62 Extend NFFT Matlab interface to d>4.
    - #64 Faster NFFT in 4D and 5D.
    - #72 Add support for higher bandwidth in NFSFT and improve parallelization.
    - #73 fastsum: Skip nearfield (pre-)computations when eps_I is zero.
    - #76 Add NFSOFT Matlab class.
    - #77 Add Mex interface for FPT.
    - #81 OpenMP parallelization of NFSOFT.
    - #82 Add NFFT Julia interface.

Changes in version 3.4.1:

    Bugfixes
    - #60 Add Latex for target `dist` in Travis.
    - #66 `ABS_SRCDIR` might return a wrong path.
    - #70 infft1d is missing in release.
    - Solved compatibility problem with MATLAB 2018a.
    - Fixed wrong libs flag when compiling for Octave and non-combined fftw3_threads.

    Enhancements
    - #52 Compile mex interface against GNU Octave in TravisCI.
    - #63 Add bash script to build statically linked libs in Windows.
    - #65 Add Octave tests.
    - #68 Add NFSFT Matlab class.

Changes in version 3.4.0:

    Bugfixes
    - #29 NFSOFT crashes due to false memory free.